--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "jquery": "^3.1.1",
     "js-cookie": "^2.1.3",
     "chart.js": "^2.0.0",
-    "hooru": "^0.1.0"
+    "hooru": "0.1.0",
+    "sjtest": "^0.3.5"
   },
   "scripts": {
     "compile-watch": "webpack --config webpack.config.dev.js --progress --colors --watch",
