--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "lodash": "^4.17.2",
     "jquery": "^3.1.1",
     "js-cookie": "^2.1.3",
-    "chart.js": "^2.0.0",
-    "hooru": "0.1.0",
-    "sjtest": "^0.3.7"
+    "chart.js": "^2.4.0",
+    "hooru": "^0.1.2",
+    "sjtest": "^0.3.8",
+    "react-chartjs2": "^1.1.1",
+    "d3-queue": "^3.0.3",
+	  "wwutils": "^0.5.6"        
   },
   "scripts": {
     "compile-watch": "webpack --config webpack.config.dev.js --progress --colors --watch",
