scratch pages and scratch tests

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 	  "wwutils": "^0.5.6"        
   },
   "scripts": {
+    "test-watch": "webpack --config webpack.config.test.js --progress --colors --watch",
     "compile-watch": "webpack --config webpack.config.dev.js --progress --colors --watch",
     "compile": "webpack -p",
     "compile-dev": "webpack --config webpack.config.dev.js",
