--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="server/src"/>
+	<classpathentry kind="src" path="server/build"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/elasticsearch-java-client"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/flexi-gson"/>
@@ -9,6 +10,6 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/winterwell.utils"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/winterwell.web"/>
 	<classpathentry kind="lib" path="/middleware/jsr305/jsr305.jar"/>
-	<classpathentry kind="lib" path="/middleware/schemaorg-java/schemaorg-java.jar"/>
+	<classpathentry kind="lib" path="/middleware/schemaorg-java/schema-org-client.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
