--- a/.classpath
+++ b/.classpath
@@ -11,5 +11,6 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/winterwell.web"/>
 	<classpathentry kind="lib" path="/middleware/jsr305/jsr305.jar"/>
 	<classpathentry kind="lib" path="/middleware/schemaorg-java/schema-org-client.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
