--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
     "jquery": "^3.1.1",
     "js-cookie": "^2.1.3",
     "chart.js": "^2.4.0",
-    "hooru": "^0.1.2",
+    "hooru": "^0.2.0",
     "sjtest": "^0.3.8",
     "react-chartjs2": "^1.1.1",
     "d3-queue": "^3.0.3",
-	  "wwutils": "^0.5.6"        
+	  "wwutils": "^0.6.2",
+    "react-bootstrap": "^0.30.7"        
   },
   "scripts": {
     "test-watch": "webpack --config webpack.config.test.js --progress --colors --watch",
