--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
     "sjtest": "^0.4.3",
     "react-chartjs2": "^1.1.1",
     "d3-queue": "^3.0.3",
-	"wwutils": "^0.6.3",
-    "react-bootstrap": "^0.30.7"        
+    "wwutils": "^0.6.3",
+    "react-bootstrap": "^0.30.7",
+	"react-stripe-checkout": "^2.2.5"
   },
   "scripts": {
     "test-watch": "webpack --config webpack.config.test.js --progress --colors --watch",
@@ -33,8 +34,12 @@
     "flow": "flow; test $? -eq 0 -o $? -eq 2"
   },
   "devDependencies": {
+    "babel-plugin-transform-flow-strip-types": "*",
     "eslint": "^3.10.2",
-    "flow-bin": "^0.36.0",
-    "babel-plugin-transform-flow-strip-types": "*"
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-react": "^6.10.0",
+    "flow-bin": "^0.36.0"
   }
 }
