--- a/config/sogive.properties
+++ b/config/sogive.properties
@@ -1,1 +1,4 @@
 
+Facebook app id 1847521215521290
+app secret d5a5ffc191f66c0d0378eabe3ab23fe6
+https://developers.facebook.com/apps/1847521215521290/dashboard/
