--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "d3-queue": "^3.0.3",
     "wwutils": "^0.6.3",
     "react-bootstrap": "^0.30.7",
-	"react-stripe-checkout": "^2.2.5"
+	"react-stripe-checkout": "^2.2.5",
+	"react-helmet": "^4.0.0"
   },
   "scripts": {
     "test-watch": "webpack --config webpack.config.test.js --progress --colors --watch",
