--- a/package.json
+++ b/package.json
@@ -9,20 +9,22 @@
     "babel-plugin-transform-object-rest-spread": "^6.16.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
-    "react": "^15.4.2",
-    "react-addons-css-transition-group": "^15.4.0",
-    "react-dom": "^15.4.0",
-    "webpack": "^1.14.0",
-    "lodash": "^4.17.2",
+    "chart.js": "^2.4.0",
+    "d3-queue": "^3.0.3",
+    "hooru": "^0.2.1",
     "jquery": "^3.1.1",
     "js-cookie": "^2.1.3",
-    "chart.js": "^2.4.0",
-    "hooru": "^0.2.1",
-    "sjtest": "^0.3.8",
+    "lodash": "^4.17.2",
+    "react": "^15.4.2",
+    "react-addons-css-transition-group": "^15.4.0",
+    "react-bootstrap": "^0.30.7",
     "react-chartjs2": "^1.1.1",
-    "d3-queue": "^3.0.3",
-	  "wwutils": "^0.6.2",
-    "react-bootstrap": "^0.30.7"        
+    "react-dom": "^15.4.0",
+    "react-redux": "^5.0.2",
+    "redux": "^3.6.0",
+    "sjtest": "^0.3.8",
+    "webpack": "^1.14.0",
+    "wwutils": "^0.6.2"
   },
   "scripts": {
     "test-watch": "webpack --config webpack.config.test.js --progress --colors --watch",
@@ -33,8 +35,12 @@
     "flow": "flow; test $? -eq 0 -o $? -eq 2"
   },
   "devDependencies": {
+    "babel-plugin-transform-flow-strip-types": "*",
     "eslint": "^3.10.2",
-    "flow-bin": "^0.36.0",
-    "babel-plugin-transform-flow-strip-types": "*"
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-react": "^6.10.0",
+    "flow-bin": "^0.36.0"
   }
 }
