--- a/.classpath
+++ b/.classpath
@@ -14,6 +14,6 @@
 	<classpathentry kind="lib" path="/middleware/schemaorg-java/schema-org-client.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/elasticsearch"/>
-	<classpathentry kind="lib" path="/middleware/stripe/stripe-java.jar"/>
+	<classpathentry kind="lib" path="/middleware/stripe/stripe-java.jar" sourcepath="/middleware/stripe/stripe-java-2.8.0.zip"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
