DataLog ES storage wip

--- a/.classpath
+++ b/.classpath
@@ -14,5 +14,7 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/elasticsearch"/>
 	<classpathentry kind="lib" path="/middleware/stripe/stripe-java.jar" sourcepath="/middleware/stripe/stripe-java-2.8.0.zip"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/flexi-gson"/>
+	<classpathentry kind="lib" path="/middleware/gson/gson-original.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
