--- a/package.json
+++ b/package.json
@@ -1,19 +1,14 @@
 {
   "name": "SoGive",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Charity app",
   "author": "Daniel Winterstein",
   "dependencies": {
-    "babel-core": "^6.23.1",
-    "babel-loader": "^6.3.2",
-    "babel-plugin-transform-object-rest-spread": "^6.16.0",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-react": "^6.23.0",
     "react": "^15.4.2",
     "react-addons-css-transition-group": "^15.4.0",
-    "react-bootstrap": "^0.30.7",
-    "react-chartjs2": "^1.1.1",
-    "react-dom": "^15.4.0",
+    "react-bootstrap": "^0.31.0",
+    "react-chartjs2": "^1.1.2",
+    "react-dom": "^15.5.4",
     "react-redux": "^5.0.2",
     "redux": "^3.6.0",
     "sjtest": "^0.3.8",
@@ -23,11 +18,8 @@
     "jquery": "^3.1.1",
     "js-cookie": "^2.1.4",
     "chart.js": "^2.4.0",
-    "hooru": "^0.3.5",
-    "sjtest": "^0.4.3",
-    "react-chartjs2": "^1.1.1",
+    "you-again": "^0.4.1",
     "d3-queue": "^3.0.3",
-    "react-bootstrap": "^0.30.7",
     "react-stripe-checkout": "^2.2.5",
     "react-helmet": "^4.0.0",
 	"easy-enums": "^1.1.5",
@@ -35,14 +27,19 @@
   },
   "scripts": {
     "test-watch": "webpack --config webpack.config.test.js --progress --colors --watch",
-    "compile-watch": "webpack --config webpack.config.dev.js --progress --colors --watch",
+    "compile-watch": "webpack --config webpack.config.js --progress --colors --watch",
     "compile": "webpack -p",
-    "compile-dev": "webpack --config webpack.config.dev.js",
+    "compile-dev": "webpack --config webpack.config.js",
     "compile-mocha": "webpack --config webpack.config.mocha.js",
     "flow": "flow; test $? -eq 0 -o $? -eq 2"
   },
   "devDependencies": {
-    "babel-plugin-transform-flow-strip-types": "*",
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",	  
+    "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "eslint": "^3.10.2",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-plugin-import": "^2.2.0",
