--- a/package.json
+++ b/package.json
@@ -1,28 +1,36 @@
 {
   "name": "SoGive",
-  "version": "0.0.2",
+  "version": "0.1.0",
   "description": "Charity app",
   "author": "Daniel Winterstein",
+  "repository": {
+    "url": "https://github.com/winterstein/sogive-app",
+    "type": "git"
+  },
+  "license": "MIT",
   "dependencies": {
-    "react": "^15.4.2",
-    "react-bootstrap": "^0.31.0",
-    "react-chartjs2": "^1.1.2",
-    "react-dom": "^15.5.4",
-    "react-redux": "^5.0.2",
-    "redux": "^3.6.0",
-    "webpack": "^1.14.0",
-    "wwutils": "^0.6.3",
-    "lodash": "^4.17.2",
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.0",
+    "chart.js": "^2.6.0",
+    "easy-enums": "^1.1.5",
+    "easyi18n": "^1.1.0",
+    "eslint-plugin-flowtype": "^2.34.0",
+    "eslint-plugin-import": "^2.3.0",
+    "hashmap": "^2.1.0",
     "jquery": "^3.1.1",
     "js-cookie": "^2.1.4",
-    "chart.js": "^2.4.0",
-    "d3-queue": "^3.0.3",
-    "react-stripe-checkout": "^2.2.5",
-	"hashmap": "^2.1.0",
+    "lodash": "^4.17.2",
+    "react": "^15.6.1",
+    "react-bootstrap": "^0.31.0",
+    "react-chartjs2": "^1.1.2",
+    "react-dom": "^15.6.1",
+    "react-redux": "^5.0.5",
+    "react-stripe-checkout": "^2.4.0",
+    "redux": "^3.7.0",
     "sjtest": "^0.4.4",
-	"you-again": "^0.4.5",
-	"easy-enums": "^1.1.5",
-	"easyi18n": "^1.1.0"
+    "webpack": "^3.0.0",
+    "wwutils": "^0.6.3",
+    "you-again": "^0.4.7"
   },
   "scripts": {
     "test-watch": "webpack --config webpack.config.test.js --progress --colors --watch",
@@ -37,7 +45,7 @@
     "babel-loader": "^7.0.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",	  
+    "babel-preset-react": "^6.24.1",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "eslint": "^3.10.2",
     "eslint-config-airbnb": "^14.1.0",
