--- a/package.json
+++ b/package.json
@@ -10,25 +10,27 @@
   "license": "MIT",
   "dependencies": {
     "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.0",
+    "babel-loader": "^7.1.1",
     "chart.js": "^2.6.0",
     "easy-enums": "^1.1.5",
     "easyi18n": "^1.1.0",
-    "eslint-plugin-flowtype": "^2.34.0",
-    "eslint-plugin-import": "^2.3.0",
+    "eslint": "^3.19.0",
+    "eslint-plugin-flowtype": "^2.35.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-react": "^6.10.3",
     "hashmap": "^2.1.0",
-    "jquery": "^3.1.1",
+    "jquery": "^3.2.1",
     "js-cookie": "^2.1.4",
     "lodash": "^4.17.2",
     "react": "^15.6.1",
-    "react-bootstrap": "^0.31.0",
+    "react-bootstrap": "^0.31.1",
     "react-chartjs2": "^1.1.2",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
     "react-stripe-checkout": "^2.4.0",
-    "redux": "^3.7.0",
+    "redux": "^3.7.2",
     "sjtest": "^0.4.4",
-    "webpack": "^3.0.0",
+    "webpack": "^3.2.0",
     "wwutils": "^0.6.3",
     "you-again": "^0.4.7"
   },
