--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "easy-enums": "^1.1.5",
     "sjtest": "^0.4.4",
     "wwutils": "^0.8.0",
-    "you-again": "^0.5.1"
+    "you-again": "^0.5.1",
+    "promise-value": "^1.0.2"
   },
   "scripts": {
     "test-watch": "webpack --config webpack.config.test.js --progress --colors --watch",
