--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,6 @@
 {
 	"workbench.colorTheme": "Solarized Light",
-
-	"background.enabled": true,
-	"background.useDefault": true,
-	"background.customImages": [
-		"http://sogive.org/img/evening-sunflowers-2k.jpg"
-	]
-	
+	"workbench.colorCustomizations": {
+		"editor.selectionBackground": "#99ff99"
+	},
 }
