--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "chart.js": "^2.6.0",
     "easyi18n": "^1.1.0",
     "hashmap": "^2.1.0",
