New donation form roughed in and almost hooked up to fundraiser page

--- a/package.json
+++ b/package.json
@@ -11,24 +11,25 @@
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "chart.js": "^2.6.0",
+    "easy-enums": "^1.1.5",
+    "easyi18n": "^1.1.0",
     "hashmap": "^2.1.0",
     "jquery": "^3.2.1",
     "js-cookie": "^2.1.4",
     "lodash": "^4.17.2",
+    "md5": "^2.2.1",
+    "promise-value": "^1.0.5",
     "react": "^15.6.1",
     "react-bootstrap": "^0.31.1",
     "react-chartjs2": "^1.1.2",
     "react-dom": "^15.6.1",
-    "react-stripe-checkout": "^2.4.0",
     "react-markdown": "^2.5.0",
-    "webpack": "^3.2.0",
-    "md5": "^2.2.1",
-    "easy-enums": "^1.1.5",
+    "react-stripe-checkout": "^2.4.0",
+    "react-stripe-elements": "^1.2.0",
     "sjtest": "^0.4.4",
-    "easyi18n": "^1.1.0",
+    "webpack": "^3.2.0",
     "wwutils": "^0.8.2",
-    "you-again": "^0.5.1",
-    "promise-value": "^1.0.5"
+    "you-again": "^0.5.1"
   },
   "scripts": {
     "test-watch": "webpack --config webpack.config.test.js --progress --colors --watch",
