--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "js-cookie": "^2.1.4",
     "lodash": "^4.17.2",
     "md5": "^2.2.1",
-    "promise-value": "^1.0.5",
     "react": "^15.6.1",
     "react-bootstrap": "^0.31.1",
     "react-chartjs2": "^1.1.2",
@@ -26,10 +25,11 @@
     "react-markdown": "^2.5.0",
     "react-stripe-checkout": "^2.4.0",
     "react-stripe-elements": "^1.2.0",
-    "sjtest": "^0.4.4",
     "webpack": "^3.2.0",
+    "sjtest": "^0.4.4",	
     "wwutils": "^0.8.2",
-    "you-again": "^0.5.1"
+    "you-again": "^0.5.2",
+    "promise-value": "^1.0.6"
   },
   "scripts": {
     "test-watch": "webpack --config webpack.config.test.js --progress --colors --watch",
