--- a/package.json
+++ b/package.json
@@ -1,59 +1,60 @@
 {
-	"name": "SoGive",
-	"version": "0.4.0",
-	"description": "Charity app",
-	"author": "Daniel Winterstein",
-	"repository": {
-		"url": "https://github.com/winterstein/sogive-app",
-		"type": "git"
-	},
-	"license": "MIT",
-	"dependencies": {
-		"babel-polyfill": "^6.26.0",
-		"chart.js": "^2.6.0",
-		"hashmap": "^2.1.0",
-		"jquery": "^3.2.1",
-		"js-cookie": "^2.2.0",
-		"lodash": "^4.17.4",
-		"md5": "^2.2.1",
-		"react": "^15.6.1",
-		"react-bootstrap": "^0.31.1",
-		"react-chartjs2": "^1.1.2",
-		"react-dom": "^15.6.1",
-		"react-autocomplete": "^1.7.2",
-		"react-markdown": "^2.5.0",
-		"react-stripe-checkout": "^2.4.0",
-		"react-stripe-elements": "^1.2.0",
-		"webpack": "^3.5.5",
-		"easy-enums": "^1.1.6",
-		"easyi18n": "^1.1.0",
-		"sjtest": "^0.4.6",
-		"data-pivot": "^0.3.1",
-		"wwutils": "^0.8.4",
-		"you-again": "^0.6.1",
-		"promise-value": "^1.0.8"
-	},
-	"scripts": {
-		"test-watch": "webpack --config webpack.config.test.js --progress --colors --watch",
-		"compile-watch": "webpack --config webpack.config.js --progress --colors --watch",
-		"compile": "webpack -p",
-		"compile-dev": "webpack --config webpack.config.js",
-		"compile-mocha": "webpack --config webpack.config.mocha.js",
-		"flow": "flow; test $? -eq 0 -o $? -eq 2"
-	},
-	"devDependencies": {
-		"babel-core": "^6.26.0",
-		"babel-loader": "^7.1.2",
-		"babel-plugin-transform-flow-strip-types": "^6.22.0",
-		"babel-plugin-transform-object-rest-spread": "^6.26.0",
-		"babel-preset-es2015": "^6.24.1",
-		"babel-preset-react": "^6.24.1",
-		"eslint": "^4.5.0",
-		"eslint-config-airbnb": "^15.1.0",
-		"eslint-plugin-flowtype": "^2.35.0",
-		"eslint-plugin-import": "^2.7.0",
-		"eslint-plugin-jsx-a11y": "^5.1.1",
-		"eslint-plugin-react": "^7.3.0",
-		"flow-bin": "^0.53.1"
-	}
+  "name": "SoGive",
+  "version": "0.4.0",
+  "description": "Charity app",
+  "author": "Daniel Winterstein",
+  "repository": {
+    "url": "https://github.com/winterstein/sogive-app",
+    "type": "git"
+  },
+  "license": "MIT",
+  "dependencies": {
+    "babel-polyfill": "^6.26.0",
+    "chart.js": "^2.6.0",
+    "data-pivot": "^0.3.1",
+    "easy-enums": "^1.1.6",
+    "easyi18n": "^1.1.0",
+    "hashmap": "^2.1.0",
+    "jquery": "^3.2.1",
+    "js-cookie": "^2.2.0",
+    "lodash": "^4.17.4",
+    "md5": "^2.2.1",
+    "promise-value": "^1.0.8",
+    "react": "^15.6.1",
+    "react-autocomplete": "^1.7.2",
+    "react-bootstrap": "^0.31.1",
+    "react-chartjs2": "^1.1.2",
+    "react-dom": "^15.6.1",
+    "react-dropzone": "^4.2.1",
+    "react-markdown": "^2.5.0",
+    "react-stripe-checkout": "^2.4.0",
+    "react-stripe-elements": "^1.2.0",
+    "sjtest": "^0.4.6",
+    "webpack": "^3.5.5",
+    "wwutils": "^0.8.4",
+    "you-again": "^0.6.1"
+  },
+  "scripts": {
+    "test-watch": "webpack --config webpack.config.test.js --progress --colors --watch",
+    "compile-watch": "webpack --config webpack.config.js --progress --colors --watch",
+    "compile": "webpack -p",
+    "compile-dev": "webpack --config webpack.config.js",
+    "compile-mocha": "webpack --config webpack.config.mocha.js",
+    "flow": "flow; test $? -eq 0 -o $? -eq 2"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-transform-flow-strip-types": "^6.22.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "eslint": "^4.5.0",
+    "eslint-config-airbnb": "^15.1.0",
+    "eslint-plugin-flowtype": "^2.35.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-react": "^7.3.0",
+    "flow-bin": "^0.53.1"
+  }
 }
