--- a/package.json
+++ b/package.json
@@ -13,22 +13,25 @@
     "chart.js": "^2.7.1",
     "data-pivot": "^0.3.1",
     "easy-enums": "^1.1.6",
-    "easyi18n": "^1.1.0",
+    "easyi18n": "^1.1.1",
+    "eslint": "^4.17.0",
+    "eslint-plugin-flowtype": "^2.42.0",
+    "eslint-plugin-react": "^7.6.1",
     "hashmap": "^2.1.0",
-    "jquery": "^3.2.1",
+    "jquery": "^3.3.1",
     "js-cookie": "^2.2.0",
-    "lodash": "^4.17.4",
+    "lodash": "^4.17.5",
     "md5": "^2.2.1",
     "promise-value": "^1.0.8",
     "react": "^16.2.0",
-    "react-autocomplete": "^1.7.2",
+    "react-autocomplete": "^1.8.0",
     "react-bootstrap": "^0.31.5",
-    "react-chartjs2": "^1.1.2",
+    "react-chartjs2": "^1.2.1",
     "react-dom": "^16.2.0",
-    "react-dropzone": "^4.2.1",
+    "react-dropzone": "^4.2.7",
     "react-markdown": "^2.5.0",
     "react-stripe-checkout": "^2.4.0",
-	 "react-stripe-elements": "^1.2.0",
+    "react-stripe-elements": "^1.4.1",
     "sjtest": "^0.4.6",
     "wwutils": "^0.8.5",
     "you-again": "^0.6.7"
