--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "easyi18n": "^1.1.1",
     "eslint": "^4.18.0",
     "eslint-plugin-flowtype": "^2.44.0",
+    "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-react": "^7.6.1",
     "hashmap": "^2.1.0",
     "jquery": "^3.3.1",
@@ -29,7 +30,7 @@
     "react-chartjs2": "^1.2.1",
     "react-dom": "^16.2.0",
     "react-dropzone": "^4.2.8",
-    "react-markdown": "^2.5.0",
+    "react-markdown": "^2.5.1",
     "react-stripe-checkout": "^2.4.0",
     "react-stripe-elements": "^1.4.1",
     "sjtest": "^0.4.6",
