--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-react": "^7.7.0",
     "hashmap": "^2.1.0",
+    "intl": "^1.2.5",
     "jquery": "^3.3.1",
     "js-cookie": "^2.2.0",
     "lodash": "^4.17.5",
