--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
   },
   "license": "MIT",
   "dependencies": {
+    "babel-loader": "^7.1.3",
     "babel-polyfill": "^6.26.0",
     "chart.js": "^2.7.1",
     "data-pivot": "^0.3.1",
     "easy-enums": "^1.1.6",
     "easyi18n": "^1.1.1",
-    "eslint": "^4.18.0",
-    "eslint-plugin-flowtype": "^2.44.0",
-    "eslint-plugin-import": "^2.8.0",
+    "eslint": "^4.18.1",
+    "eslint-plugin-flowtype": "^2.46.1",
+    "eslint-plugin-import": "^2.9.0",
     "eslint-plugin-react": "^7.7.0",
     "hashmap": "^2.1.0",
     "intl": "^1.2.5",
