--- a/.babelrc
+++ b/.babelrc
@@ -1,1 +1,8 @@
-{ "presets": ["es2015", "react"] }
+{
+    "presets": [["es2015", { "modules": false}], "react"],
+    "env": {
+    	"test": {
+    		"presets": ["es2015", "react"],
+    	}
+    }
+}
