--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,8 @@
 {
-    "presets": [["es2015", { "modules": false}], "stage-2", react"],
+    "presets": [["es2015", { "modules": false}], "stage-2", "react"],
     "env": {
     	"production": {
     		"plugins": ["transform-react-remove-prop-types"]
-    	},
-    	"test": {
-    		"presets": ["es2015", "react"],
     	}
     }
 }
