--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "babel-preset-stage2": "^6.24.1",
     "babel-loader": "^7.1.4",
     "babel-polyfill": "^6.26.0",
     "chart.js": "^2.7.2",
