--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "babel-preset-stage-2": "^6.24.1",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.13",
     "babel-loader": "^7.1.4",
     "babel-polyfill": "^6.26.0",
     "chart.js": "^2.7.2",
