--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "sjtest": "^0.4.6",
     "webpack": "^3.11.0",
     "wwutils": "^0.8.8",
-    "you-again": "^0.6.7"
+    "you-again": "^0.6.7",
+    "babel-plugin-transform-async-to-generator": "^6.24.1",
+    "puppeteer": "^1.2.0"
   },
   "scripts": {
     "test-watch": "webpack --config webpack.config.test.js --progress --colors --watch",
