Got rid of jquery in markup

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-	"workbench.colorTheme": "Solarized Light",
+	"workbench.colorTheme": "Default Dark+",
 	"workbench.colorCustomizations": {
 		"editor.selectionBackground": "#99ff99"
 	}
