--- a/package.json
+++ b/package.json
@@ -62,6 +62,6 @@
     "babel-plugin-transform-react-remove-prop-types": "^0.4.13",
     "babel-polyfill": "^6.26.0",
     "babel-preset-stage-2": "^6.24.1",
-	"webpack": "^3.11.0",
+	"webpack": "^3.11.0"
   }
 }
