--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "flow": "flow; test $? -eq 0 -o $? -eq 2"
   },
   "devDependencies": {
-    "webpack": "^3.8.1",
+    "webpack": "^3.11.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
@@ -61,7 +61,6 @@
     "puppeteer": "^1.2.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.13",
     "babel-polyfill": "^6.26.0",
-    "babel-preset-stage-2": "^6.24.1",
-	"webpack": "^3.11.0"
+    "babel-preset-stage-2": "^6.24.1"
   }
 }
