--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "easy-enums": "^1.1.6",
     "easyi18n": "^1.1.1",
     "eslint": "^4.19.1",
+    "eslint-plugin-import": "^2.10.0",
     "hashmap": "^2.1.0",
     "intl": "^1.2.5",
     "jquery": "^3.3.1",
@@ -21,11 +22,11 @@
     "lodash": "^4.17.5",
     "md5": "^2.2.1",
     "promise-value": "^1.0.8",
-    "react": "^16.2.0",
+    "react": "^16.3.0",
     "react-autocomplete": "^1.8.1",
     "react-bootstrap": "^0.31.5",
     "react-chartjs2": "^1.2.1",
-    "react-dom": "^16.2.0",
+    "react-dom": "^16.3.0",
     "react-dropzone": "^4.2.9",
     "react-markdown": "^2.5.1",
     "react-stripe-checkout": "^2.4.0",
