--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "easy-enums": "^1.1.6",
     "easyi18n": "^1.1.1",
     "eslint": "^4.19.1",
+    "eslint-plugin-flowtype": "^2.46.2",
     "eslint-plugin-import": "^2.11.0",
     "hashmap": "^2.1.0",
     "intl": "^1.2.5",
