--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "data-pivot": "^0.3.1",
     "easy-enums": "^1.1.6",
     "easyi18n": "^1.1.1",
+    "eslint-plugin-flowtype": "^2.46.2",
     "hashmap": "^2.1.0",
     "intl": "^1.2.5",
     "jquery": "^3.3.1",
@@ -20,11 +21,11 @@
     "lodash": "^4.17.5",
     "md5": "^2.2.1",
     "promise-value": "^1.0.8",
-    "react": "^16.3.1",
+    "react": "^16.3.2",
     "react-autocomplete": "^1.8.1",
     "react-bootstrap": "^0.31.5",
     "react-chartjs2": "^1.2.1",
-    "react-dom": "^16.3.1",
+    "react-dom": "^16.3.2",
     "react-dropzone": "^4.2.9",
     "react-markdown": "^2.5.1",
     "react-stripe-checkout": "^2.4.0",
@@ -49,7 +50,7 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-	 "eslint": "^4.19.1",
+    "eslint": "^4.19.1",
     "eslint-config-airbnb": "^15.1.0",
     "eslint-plugin-flowtype": "^2.35.0",
     "eslint-plugin-import": "^2.11.0",
