--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "babel-core": "^6.26.3",
     "chart.js": "^2.7.2",
     "data-pivot": "^0.3.1",
     "easy-enums": "^1.1.6",
