--- a/test/screenshots/.babelrc
+++ b/test/screenshots/.babelrc
@@ -1,4 +1,21 @@
 {
-  "plugins": ["transform-async-to-generator"]
+  "presets": [
+    ["env", {
+      "targets": {
+        "node": "current"
+      }
+    }]
+  ]
 }
+/**Figured it out: config files are considered to be "outside jest's runtime"
+and are therefore not babeled
+* Just going to have to write config files in older ES standard.
+*/
 
+//Can't get jest babel to work at all.
+//Doesn't seem worth further time trying to correct.
+//Can alternatively babel the files to test myself
+//as long as the files are in the __test__ folder, they'll be picked up fine
+
+//Little bit more annoying if we want to use the global setup options.
+//Will have to babel all of those files too.
