--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "data-pivot": "^0.3.1",
     "easy-enums": "^1.1.6",
     "easyi18n": "^1.1.1",
+    "eslint-plugin-react": "^7.8.2",
     "hashmap": "^2.3.0",
     "intl": "^1.2.5",
     "jquery": "^3.3.1",
@@ -31,6 +32,7 @@
     "react-stripe-checkout": "^2.6.3",
     "react-stripe-elements": "^1.6.0",
     "sjtest": "^0.4.7",
+    "webpack": "^3.12.0",
     "wwutils": "^0.9.1",
     "you-again": "^0.7.0"
   },
