--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "data-pivot": "^0.3.1",
     "easy-enums": "^1.1.6",
     "easyi18n": "^1.1.1",
+    "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-react": "^7.8.2",
     "hashmap": "^2.3.0",
     "intl": "^1.2.5",
