Solved Jest not picking up tests from test-base by symlinking a couple of files into sogive-app directory

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "data-pivot": "^0.3.1",
     "easy-enums": "^1.1.6",
     "easyi18n": "^1.1.1",
+    "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-react": "^7.8.2",
     "hashmap": "^2.3.0",
     "intl": "^1.2.5",
@@ -21,7 +22,7 @@
     "js-cookie": "^2.2.0",
     "lodash": "^4.17.10",
     "md5": "^2.2.1",
-    "promise-value": "^1.1.0",
+    "promise-value": "^1.1.1",
     "react": "^16.3.2",
     "react-autocomplete": "^1.8.1",
     "react-bootstrap": "^0.32.1",
