LoginWidget old code fix

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "data-pivot": "^0.3.1",
     "easy-enums": "^1.1.6",
     "easyi18n": "^1.1.1",
+    "eslint-plugin-flowtype": "^2.47.1",
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-react": "^7.8.2",
     "hashmap": "^2.3.0",
@@ -23,12 +24,12 @@
     "lodash": "^4.17.10",
     "md5": "^2.2.1",
     "promise-value": "^1.1.1",
-    "react": "^16.3.2",
+    "react": "^16.4.0",
     "react-autocomplete": "^1.8.1",
     "react-bootstrap": "^0.32.1",
     "react-chartjs2": "^1.2.1",
-    "react-dom": "^16.3.2",
-    "react-dropzone": "^4.2.9",
+    "react-dom": "^16.4.0",
+    "react-dropzone": "^4.2.10",
     "react-markdown": "^3.3.2",
     "react-stripe-checkout": "^2.6.3",
     "react-stripe-elements": "^1.6.0",
