--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "react-stripe-checkout": "^2.6.3",
     "react-stripe-elements": "^1.6.0",
     "sjtest": "^0.4.7",
-    "webpack": "^3.11.0",
+    "webpack": "3.11.0",
     "wwutils": "^0.9.1",
     "you-again": "^0.7.0"
   },
@@ -47,7 +47,7 @@
     "flow": "flow; test $? -eq 0 -o $? -eq 2"
   },
   "devDependencies": {
-    "webpack": "^3.11.0",
+    "webpack": "3.11.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
