standardised folders refactor

--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,1 @@
-{
-    "presets": [["es2015", { "modules": false}], "stage-2", "react"],
-    "env": {
-    	"production": {
-    		"plugins": ["transform-react-remove-prop-types"]
-    	}
-    }
-}
+../wwappbase.js/project/.babelrc
