--- a/package.json
+++ b/package.json
@@ -9,27 +9,29 @@
   },
   "license": "MIT",
   "dependencies": {
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.18",
     "chart.js": "^2.7.2",
     "easy-enums": "^1.1.6",
     "easyi18n": "^1.1.1",
+    "eslint": "^5.6.0",
     "hashmap": "^2.3.0",
     "intl": "^1.2.5",
     "jquery": "^3.3.1",
     "js-cookie": "^2.2.0",
-    "lodash": "^4.17.10",
+    "lodash": "^4.17.11",
     "md5": "^2.2.1",
     "promise-value": "^1.1.2",
-    "react": "^16.4.2",
+    "react": "^16.5.2",
     "react-autocomplete": "^1.8.1",
-    "react-bootstrap": "^0.32.3",
+    "react-bootstrap": "^0.32.4",
     "react-chartjs2": "^1.2.1",
-    "react-dom": "^16.4.2",
+    "react-dom": "^16.5.2",
     "react-dropzone": "^4.3.0",
-    "react-markdown": "^3.5.0",
+    "react-markdown": "^3.6.0",
     "react-stripe-checkout": "^2.6.3",
     "react-stripe-elements": "^1.7.0",
     "sjtest": "^0.4.7",
-    "wwutils": "^0.9.2",
+    "wwutils": "^0.9.3",
     "you-again": "^0.8.0"
   },
   "scripts": {
