--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "easy-enums": "^1.1.6",
     "easyi18n": "^1.1.1",
     "eslint": "^5.6.1",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
     "hashmap": "^2.3.0",
     "intl": "^1.2.5",
     "jquery": "^3.3.1",
