--- a/package.json
+++ b/package.json
@@ -14,23 +14,26 @@
     "easy-enums": "^1.1.6",
     "easyi18n": "^1.1.1",
     "eslint": "^5.10.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.0",
+    "eslint-plugin-react": "^7.12.4",
     "hashmap": "^2.3.0",
     "jquery": "^3.3.1",
     "js-cookie": "^2.2.0",
     "lodash": "^4.17.11",
     "md5": "^2.2.1",
     "promise-value": "^1.1.2",
-    "react": "^16.6.3",
+    "react": "^16.7.0",
     "react-autocomplete": "^1.8.1",
     "react-bootstrap": "^0.32.4",
     "react-chartjs2": "^1.2.1",
-    "react-dom": "^16.6.3",
+    "react-dom": "^16.7.0",
     "react-dropzone": "^4.3.0",
     "react-markdown": "^4.0.4",
     "react-stripe-checkout": "^2.6.3",
     "react-stripe-elements": "^2.0.1",
-    "sjtest": "^0.4.8",
-    "wwutils": "^0.9.3",
+    "sjtest": "^0.4.9",
+    "wwutils": "^0.9.4",
     "you-again": "^0.8.4"
   },
   "scripts": {
