--- a/package.json
+++ b/package.json
@@ -12,21 +12,23 @@
     "chart.js": "^2.7.3",
     "easy-enums": "^1.1.6",
     "easyi18n": "^1.1.1",
+    "eslint": "^5.14.1",
     "hashmap": "^2.3.0",
     "jquery": "^3.3.1",
     "js-cookie": "^2.2.0",
     "lodash": "^4.17.11",
     "md5": "^2.2.1",
     "promise-value": "^1.2.1",
-    "react": "^16.7.0",
+    "react": "^16.8.3",
     "react-autocomplete": "^1.8.1",
     "react-bootstrap": "^0.32.4",
     "react-chartjs2": "^1.2.1",
-    "react-dom": "^16.7.0",
+    "react-dom": "^16.8.3",
     "react-dropzone": "^4.3.0",
     "react-markdown": "^4.0.4",
     "react-stripe-checkout": "^2.6.3",
     "react-stripe-elements": "^2.0.3",
+    "scheduler": "^0.13.3",
     "sjtest": "^0.4.9",
     "wwutils": "^0.9.4",
     "you-again": "^0.8.4"
