--- a/package.json
+++ b/package.json
@@ -9,25 +9,28 @@
   },
   "license": "MIT",
   "dependencies": {
-    "chart.js": "^2.7.3",
+    "chart.js": "^2.8.0",
     "easy-enums": "^1.1.6",
     "easyi18n": "^1.1.1",
+    "eslint": "^5.16.0",
+    "eslint-plugin-import": "^2.17.3",
+    "eslint-plugin-react": "^7.13.0",
     "hashmap": "^2.3.0",
-    "jquery": "^3.3.1",
+    "jquery": "^3.4.1",
     "js-cookie": "^2.2.0",
     "lodash": "^4.17.11",
     "md5": "^2.2.1",
     "promise-value": "^1.2.1",
-    "react": "^16.8.4",
+    "react": "^16.8.6",
     "react-autocomplete": "^1.8.1",
     "react-bootstrap": "^0.32.4",
     "react-chartjs2": "^1.2.1",
-    "react-dom": "^16.8.4",
+    "react-dom": "^16.8.6",
     "react-dropzone": "^4.3.0",
-    "react-markdown": "^4.0.4",
+    "react-markdown": "^4.0.8",
     "react-stripe-checkout": "^2.6.3",
     "react-stripe-elements": "^2.0.3",
-    "scheduler": "^0.13.4",
+    "scheduler": "^0.13.6",
     "sjtest": "^0.4.9",
     "wwutils": "^0.9.4",
     "you-again": "^0.8.4"
