--- a/.classpath
+++ b/.classpath
@@ -16,7 +16,6 @@
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/flexi-gson"/>
 	<classpathentry kind="lib" path="dependencies/gson.jar"/>
-	<classpathentry kind="lib" path="dependencies/lombok.jar"/>
 	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/winterwell.webappbase"/>
 	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/youagain-java-client"/>
 	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/winterwell.depot"/>
@@ -24,5 +23,6 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/calstat"/>
 	<classpathentry kind="lib" path="dependencies/stripe-java.jar"/>
 	<classpathentry kind="lib" path="/middleware/mockito/mockito-all.jar"/>
+	<classpathentry kind="lib" path="/middleware/lombok/lombok.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
