--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "easy-enums": "^1.1.6",
     "easyi18n": "^1.1.1",
     "eslint": "^5.16.0",
-    "eslint-plugin-import": "^2.17.3",
-    "eslint-plugin-react": "^7.13.0",
+    "eslint-config-airbnb": "^17.1.1",
+    "eslint-plugin-import": "^2.18.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.14.2",
     "hashmap": "^2.3.0",
     "jquery": "^3.4.1",
     "js-cookie": "^2.2.0",
@@ -27,7 +29,7 @@
     "react-chartjs2": "^1.2.1",
     "react-dom": "^16.8.6",
     "react-dropzone": "^4.3.0",
-    "react-markdown": "^4.0.8",
+    "react-markdown": "^4.1.0",
     "react-stripe-checkout": "^2.6.3",
     "react-stripe-elements": "^2.0.3",
     "scheduler": "^0.13.6",
