--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "SoGive",
-  "version": "0.5.1",
+  "version": "0.5.2",
   "description": "Charity app",
   "author": "Daniel Winterstein",
   "repository": {
@@ -9,18 +9,14 @@
   },
   "license": "MIT",
   "dependencies": {
+	"bootstrap": "^3.4.1",
     "chart.js": "^2.8.0",
     "easy-enums": "^1.1.6",
     "easyi18n": "^1.1.1",
-    "eslint": "^5.16.0",
-    "eslint-config-airbnb": "^17.1.1",
-    "eslint-plugin-import": "^2.18.0",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.14.2",
     "hashmap": "^2.3.0",
     "jquery": "^3.4.1",
     "js-cookie": "^2.2.0",
-    "lodash": "^4.17.11",
+    "lodash": "^4.17.14",
     "md5": "^2.2.1",
     "promise-value": "^1.2.1",
     "react": "^16.8.6",
@@ -28,7 +24,7 @@
     "react-bootstrap": "^0.32.4",
     "react-chartjs2": "^1.2.1",
     "react-dom": "^16.8.6",
-    "react-dropzone": "^4.3.0",
+    "react-dropzone": "^8.1.0",
     "react-markdown": "^4.1.0",
     "react-stripe-checkout": "^2.6.3",
     "react-stripe-elements": "^2.0.3",
@@ -38,26 +34,27 @@
     "you-again": "^0.8.4"
   },
   "scripts": {
-    "compile-watch": "webpack --config webpack.config.js --progress --colors --watch",
-    "compile": "webpack -p"
+    "compile": "webpack --config $PWD/webpack.config.js --progress --colors",
+    "compile-watch": "webpack --config $PWD/webpack.config.js --progress --colors --watch",
+    "compile-watch-fast": "NO_PROD=true webpack --progress --colors --watch"
   },
   "devDependencies": {
-    "intl": "^1.2.5",
-    "eslint": "^5.14.1",
+    "@babel/core": "^7.3.4",
+    "@babel/plugin-proposal-class-properties": "^7.3.4",
+    "@babel/plugin-transform-react-jsx": "^7.3.0",
+    "@babel/polyfill": "^7.2.5",
+    "@babel/preset-env": "^7.3.4",
+    "babel-loader": "^8.0.5",
+    "babel-plugin-transform-node-env-inline": "^0.4.3",
+	"css-loader": "^3.0.0",
+	"style-loader": "^0.23.1",
+    "eslint": "^5.15.1",
+    "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-react": "^7.12.4",
-    "eslint-config-airbnb": "^17.1.0",
-    "webpack": "^3.12.0",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-polyfill": "^6.26.0",
-    "babel-cli": "^6.26.0",
-    "babel-preset-stage-2": "^6.24.1"
+	"eslint-plugin-react": "^7.12.4",
+    "intl": "^1.2.5",
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.2.3"
   }
 }
