--- a/.classpath
+++ b/.classpath
@@ -3,31 +3,27 @@
 	<classpathentry kind="src" path="test/java"/>
 	<classpathentry kind="src" path="src/java"/>
 	<classpathentry kind="src" path="builder"/>
-	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/elasticsearch-java-client"/>
 	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/winterwell.bob"/>
 	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/winterwell.datalog"/>
 	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/winterwell.utils"/>
 	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/winterwell.web"/>
-	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/flexi-gson"/>
-	<classpathentry kind="lib" path="dependencies/gson.jar"/>
 	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/winterwell.webappbase"/>
 	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/youagain-java-client"/>
 	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/winterwell.depot"/>
 	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/winterwell.maths"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/calstat"/>
-	<classpathentry kind="lib" path="dependencies/stripe-java.jar"/>
-	<classpathentry kind="lib" path="/middleware/mockito/mockito-all.jar"/>
-	<classpathentry kind="lib" path="/middleware/lombok/lombok.jar"/>
 	<classpathentry kind="src" path="target/generated-sources/annotations">
 		<attributes>
 			<attribute name="optional" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="dependencies/gson.jar"/>
+	<classpathentry kind="lib" path="dependencies/stripe-java.jar"/>
+	<classpathentry kind="lib" path="/middleware/mockito/mockito-all.jar"/>
+	<classpathentry kind="lib" path="/middleware/lombok/lombok.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
