--- a/package.json
+++ b/package.json
@@ -58,9 +58,11 @@
     "jest-puppeteer": "^4.4.0",
     "ndb": "^1.1.5",
     "puppeteer": "^2.0.0",
+    "shelljs": "^0.8.3",
     "style-loader": "^0.23.1",
     "webpack": "^4.29.6",
-    "webpack-cli": "^3.2.3"
+    "webpack-cli": "^3.2.3",
+    "yargs": "^15.1.0"
   },
   "jest": {
     "preset": "jest-puppeteer",
