Added TS compatibility

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@types/react": "^16.9.22",
+    "@types/react-dom": "^16.9.5",
     "bootstrap": "^3.4.1",
     "chart.js": "^2.8.0",
     "easy-enums": "^1.1.6",
@@ -31,36 +33,54 @@
     "scheduler": "^0.13.6",
     "sjtest": "^0.4.9",
     "wwutils": "^0.9.5",
-    "you-again": "^0.8.6"
+    "you-again": "^0.8.6",
+    "jest": "^25.1.0",
+    "shelljs": "^0.8.3",
+    "yargs": "^15.1.0",
+    "jest-puppeteer": "^4.4.0",
+    "puppeteer": "^2.0.0",
+    "puppet-theatre": "latest"
   },
   "scripts": {
     "compile": "webpack --config $PWD/webpack.config.js --progress --colors",
     "compile-watch": "webpack --config $PWD/webpack.config.js --progress --colors --watch",
     "compile-watch-fast": "NO_PROD=true webpack --progress --colors --watch",
-    "test": "jest"
+    "test": "jest",
+    "check-types": "tsc --noEmit"
   },
   "devDependencies": {
     "@babel/core": "^7.3.4",
     "@babel/plugin-proposal-class-properties": "^7.3.4",
     "@babel/plugin-transform-react-jsx": "^7.3.0",
+    "@babel/plugin-transform-typescript": "^7.8.3",
     "@babel/polyfill": "^7.2.5",
     "@babel/preset-env": "^7.3.4",
+    "@babel/preset-react": "^7.8.3",
+    "@babel/preset-typescript": "^7.8.3",
+    "@typescript-eslint/eslint-plugin": "^2.21.0",
+    "@typescript-eslint/parser": "^2.21.0",
+    "babel-eslint": "^10.1.0",
+    "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.5",
+    "babel-plugin-const-enum": "0.0.5",
     "babel-plugin-transform-node-env-inline": "^0.4.3",
     "css-loader": "^3.0.0",
-    "eslint": "^5.15.1",
-    "eslint-config-airbnb": "^17.1.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
+    "eslint-plugin-react-hooks": "^1.6.0",
     "intl": "^1.2.5",
-    "jest": "^24.9.0",
+    "jest": "^25.0.1",
+    "jest-environment-puppeteer": "^4.3.0",
     "jest-puppeteer": "^4.4.0",
     "ndb": "^1.1.5",
     "puppeteer": "^2.0.0",
-    "puppet-theatre": "^1.0.18",
+    "puppet-theatre": "latest",
     "shelljs": "^0.8.3",
     "style-loader": "^0.23.1",
+    "typescript": "^3.8.3",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3",
     "yargs": "^15.1.0"
