Try standardising on Bootstrap 4 + Reactstrap

--- a/package.json
+++ b/package.json
@@ -16,30 +16,30 @@
     "easy-enums": "^1.1.6",
     "easyi18n": "^1.1.1",
     "hashmap": "^2.4.0",
+    "jest": "^25.1.0",
+    "jest-puppeteer": "^4.4.0",
     "jquery": "^3.4.1",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.14",
     "md5": "^2.2.1",
     "promise-value": "^1.2.5",
+    "puppet-theatre": "latest",
+    "puppeteer": "^2.0.0",
     "react": "^16.8.6",
     "react-autocomplete": "^1.8.1",
-    "react-bootstrap": "^0.32.4",
     "react-chartjs2": "^1.2.1",
     "react-dom": "^16.8.6",
     "react-dropzone": "4.3.0",
     "react-markdown": "^4.1.0",
     "react-stripe-checkout": "^2.6.3",
     "react-stripe-elements": "^2.0.3",
+    "reactstrap": "^8.4.1",
     "scheduler": "^0.13.6",
+    "shelljs": "^0.8.3",
     "sjtest": "^0.4.9",
     "wwutils": "^0.9.5",
-    "you-again": "^0.8.6",
-    "jest": "^25.1.0",
-    "shelljs": "^0.8.3",
     "yargs": "^15.1.0",
-    "jest-puppeteer": "^4.4.0",
-    "puppeteer": "^2.0.0",
-    "puppet-theatre": "latest"
+    "you-again": "^0.8.6"
   },
   "scripts": {
     "compile": "webpack --config $PWD/webpack.config.js --progress --colors",
@@ -67,17 +67,17 @@
     "css-loader": "^3.0.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
-    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-react": "^7.12.4",
-    "eslint-plugin-react-hooks": "^1.6.0",
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react-hooks": "^3.0.0",
     "intl": "^1.2.5",
     "jest": "^25.0.1",
     "jest-environment-puppeteer": "^4.3.0",
     "jest-puppeteer": "^4.4.0",
     "ndb": "^1.1.5",
-    "puppeteer": "^2.0.0",
     "puppet-theatre": "latest",
+    "puppeteer": "^2.0.0",
     "shelljs": "^0.8.3",
     "style-loader": "^0.23.1",
     "typescript": "^3.8.3",
