--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "sjtest": "^0.4.9",
     "wwutils": "^0.9.5",
     "yargs": "^15.1.0",
-    "you-again": "^0.8.6"
+    "you-again": "^0.8.6",
+    "jest": "^25.1.0"
   },
   "scripts": {
     "compile": "webpack --config $PWD/webpack.config.js --progress --colors",
