it compiles again

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "SoGive",
-  "version": "0.5.5",
+  "version": "0.5.6",
   "description": "Charity app",
   "author": "Daniel Winterstein",
   "repository": {
@@ -9,21 +9,16 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@types/react": "^16.9.32",
-    "@types/react-dom": "^16.9.5",
-    "bootstrap": "^3.4.1",
+    "bootstrap": "^4.3.1",
     "chart.js": "^2.8.0",
     "easy-enums": "^1.1.7",
     "easyi18n": "^1.1.1",
     "hashmap": "^2.4.0",
-    "jest-puppeteer": "^4.4.0",
     "jquery": "^3.4.1",
     "js-cookie": "^2.2.1",
-    "lodash": "^4.17.14",
+    "lodash": "^4.17.15",
     "md5": "^2.2.1",
     "promise-value": "^1.2.8",
-    "puppet-theatre": "latest",
-    "puppeteer": "^2.0.0",
     "react": "^16.13.1",
     "react-autocomplete": "^1.8.1",
     "react-chartjs2": "^1.2.1",
@@ -33,13 +28,9 @@
     "react-stripe-checkout": "^2.6.3",
     "react-stripe-elements": "^2.0.3",
     "reactstrap": "^8.4.1",
-    "scheduler": "^0.13.6",
-    "shelljs": "^0.8.3",
     "sjtest": "^0.4.9",
     "wwutils": "^0.9.5",
-    "yargs": "^15.1.0",
-    "you-again": "^0.8.6",
-    "jest": "^25.1.0"
+    "you-again": "^0.8.6"
   },
   "scripts": {
     "compile": "webpack --config $PWD/webpack.config.js --progress --colors",
@@ -51,12 +42,16 @@
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/plugin-transform-react-jsx": "^7.9.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.9.5",
+    "@babel/plugin-transform-react-jsx": "^7.3.0",
     "@babel/plugin-transform-typescript": "^7.8.3",
     "@babel/polyfill": "^7.8.7",
-    "@babel/preset-env": "^7.9.0",
+    "@babel/preset-env": "^7.9.5",
     "@babel/preset-react": "^7.8.3",
     "@babel/preset-typescript": "^7.8.3",
+    "@types/react": "^16.9.22",
+    "@types/react-dom": "^16.9.5",
+    "@types/reactstrap": "^8.4.2",
     "@typescript-eslint/eslint-plugin": "^2.27.0",
     "@typescript-eslint/parser": "^2.27.0",
     "babel-eslint": "^10.1.0",
