npm-build-manifest

--- a/package.json
+++ b/package.json
@@ -29,14 +29,10 @@
     "react-stripe-elements": "^2.0.3",
     "reactstrap": "^8.4.1",
     "sjtest": "^0.4.9",
-    "wwutils": "^0.9.5",
-    "you-again": "^0.8.8",
-    "jest": "^25.1.0",
-    "shelljs": "^0.8.3",
-    "yargs": "^15.1.0"
+    "you-again": "^0.8.8"
   },
   "scripts": {
-    "compile": "webpack --config $PWD/webpack.config.js --progress --colors",
+    "compile": "webpack --config $PWD/webpack.config.js --progress --colors && git log -1 > web/build/npm-compile.gitlog.txt",
     "compile-watch": "webpack --config $PWD/webpack.config.js --progress --colors --watch",
     "compile-watch-fast": "NO_PROD=true webpack --progress --colors --watch",
     "test": "jest",
@@ -45,13 +41,13 @@
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/plugin-proposal-object-rest-spread": "^7.9.5",
-    "@babel/plugin-transform-react-jsx": "^7.3.0",
-    "@babel/plugin-transform-typescript": "^7.8.3",
+    "@babel/plugin-proposal-object-rest-spread": "^7.9.6",
+    "@babel/plugin-transform-react-jsx": "^7.9.4",
+    "@babel/plugin-transform-typescript": "^7.9.6",
     "@babel/polyfill": "^7.8.7",
     "@babel/preset-env": "^7.9.5",
-    "@babel/preset-react": "^7.8.3",
-    "@babel/preset-typescript": "^7.8.3",
+    "@babel/preset-react": "^7.9.4",
+    "@babel/preset-typescript": "^7.9.0",
     "@types/react": "^16.9.22",
     "@types/react-dom": "^16.9.5",
     "@types/reactstrap": "^8.4.2",
@@ -60,14 +56,14 @@
     "babel-eslint": "^10.1.0",
     "babel-jest": "^24.9.0",
     "babel-loader": "^8.1.0",
-    "babel-plugin-const-enum": "0.0.5",
+    "babel-plugin-const-enum": "^1.0.1",
     "babel-plugin-transform-node-env-inline": "^0.4.3",
-    "css-loader": "^3.5.2",
+    "css-loader": "^3.5.3",
     "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-airbnb": "^18.1.0",
     "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-react-hooks": "^3.0.0",
     "intl": "^1.2.5",
     "jest": "^25.2.7",
@@ -78,6 +74,7 @@
     "mini-css-extract-plugin": "^0.9.0",
     "ndb": "^1.1.5",
     "puppeteer": "^3.0.0",
+    "puppet-theatre": "^1.0.18",
     "shelljs": "^0.8.3",
     "style-loader": "^0.23.1",
     "typescript": "^3.8.3",
